Add build script. Update readme with usage instructions.

--- a/assets/server/package.json
+++ b/assets/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npx serve -p 8080 hello/"
+        "start": "npx serve -n -p 8080 hello/"
     },
     "author": "",
     "license": "SEE LICENSE IN LICENSE",
