--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,10 +1,11 @@
 FROM docker:20.10.17-cli-alpine3.16
 
 #add packages
-RUN apk add --update --no-cache -q openssh nano bash curl jq tar gzip
+RUN apk add --update --no-cache -q openssh nano bash curl jq tar gzip tree
 
 #ssh prep (ssh not installed)
 RUN mv /root /waka \
+    && sed -i 's|/root|/waka|g' /etc/passwd \
     && mkdir -p /waka/.ssh \
     && chmod 700 /waka/.ssh \
     && touch /waka/.ssh/known_hosts \
@@ -12,6 +13,10 @@ RUN mv /root /waka \
 
 #include scripts
 COPY assets /waka/
+RUN mkdir -p /opt/resource \
+    && ln -s /waka/check /opt/resource/check \
+    && ln -s /waka/in /opt/resource/in \
+    && ln -s /waka/out /opt/resource/out
 
 #ready workspace
 ARG APPKU_WAKA_VERSION=1.0.0
