Add support for custom env variables during deployment. Update README.

--- a/deploy/test/waka-hello-pipeline.yml
+++ b/deploy/test/waka-hello-pipeline.yml
@@ -76,3 +76,5 @@ jobs:
         params: 
           mode: compose
           source: compose
+          env:
+            HELLO: WORLD"$^%&*().893++94-4()[]sdfsdf
