Finish new appku/waka notify resource type for Jido. Fix issue with reading stdin in containerd based workers.

--- a/deploy/test/waka-hello-pipeline.yml
+++ b/deploy/test/waka-hello-pipeline.yml
@@ -16,8 +16,8 @@ resources:
         username: ((apps.username))
         password: ((apps.password))
         key: ((apps.key))
-        registry: registry.localhost
-        jido: jido.localhost
+        registry: ((apps.registry))
+        jido: ((apps.jido))
 
 jobs:
   - name: put-get
