--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -17,7 +17,7 @@ RUN mv /root /waka \
 #update & install packages
 RUN microdnf update -y \
     && microdnf install -y --nodocs \
-        nano findutils iputils bind-utils jq tar gzip curl openssl openssh-clients tree gettext which \
+        nano findutils iputils bind-utils jq tar gzip curl openssl openssh-clients tree gettext which nc \
     && microdnf clean all \
     #install rg
     && curl https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep-13.0.0-x86_64-unknown-linux-musl.tar.gz -L -o /tmp/rg.tar.gz \
@@ -32,10 +32,10 @@ RUN microdnf update -y \
     && rm -fr /tmp/*
 
 #include scripts
-COPY assets /waka/
+COPY hello hello.html /waka/
 
 #ready workspace
-ARG APPKU_WAKA_VERSION=1.0.0
+ARG APPKU_WAKA_VERSION=1.1.0
 ENV APPKU_WAKA_VERSION=${APPKU_WAKA_VERSION}
 ENV PATH="${PATH}:/waka"
 ENV HOME="/waka"
