--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -3,9 +3,9 @@ FROM appku/waka
 #install node
 ENV NVM_DIR /usr/local/nvm
 ENV NVM_NO_PROGRESS 1
-ENV NODE_VERSION 18.10.0
+ENV NODE_VERSION 18.16.0
 ENV NODE_PORT 8080
-RUN mkdir -p $NVM_DIR && curl -sL https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+RUN mkdir -p $NVM_DIR && curl -sL https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
@@ -16,6 +16,9 @@ RUN microdnf install -y --nodocs git make g++ \
 #install commonly used dev/build packages to speed up builds.
 RUN npm i -g \
     @types/jest \
+    @types/react \
+    @types/react-dom \
+    @vitejs/plugin-react \
     @vue/eslint-config-standard \
     babel-eslint \
     babel-jest \
@@ -27,10 +30,10 @@ RUN npm i -g \
     eslint-plugin-import \
     eslint-plugin-node \
     eslint-plugin-promise \
+    eslint-plugin-react-hooks \
+    eslint-plugin-react-refresh \
     eslint-plugin-vue \
     jest \
-    jest-circus \
-    jest-resolve \
     jsdoc \
     jsdoc-plugin-intersection \
     react \
@@ -39,17 +42,10 @@ RUN npm i -g \
     react-refresh \
     react-router-dom \
     sass \
+    vite \
     vue \
     vue-cli-plugin-style-resources-loader \
     vue-router \
     vue-template-compiler
 
-#ready workspace
-ARG APPKU_WAKA_VERSION=1.0.0
-ENV APPKU_WAKA_VERSION=${APPKU_WAKA_VERSION}
-ENV PATH="${PATH}:/waka"
-ENV HOME="/waka"
-WORKDIR /waka
-
-#set default shell to bash
-SHELL ["/bin/bash", "-c"]
+CMD ["npm", "install", "--no-fund", "--no-audit", "--skip-installed", "--prefer-offline"]
