--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -1,7 +1,8 @@
 FROM appku/waka:docker
 
 #add packages
-RUN apk add --update --no-cache -q openssh
+RUN apk update \
+    && apk add --update --no-cache -q openssh gettext ca-certificates
 
 #include scripts
 COPY docker-compose-ops /waka/
