--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -3,23 +3,18 @@ FROM appku/waka
 #install node
 ENV NVM_DIR /usr/local/nvm
 ENV NVM_NO_PROGRESS 1
-ENV NODE_VERSION 18.16.0
+ENV NODE_VERSION 20.9.0
 ENV NODE_PORT 8080
 RUN mkdir -p $NVM_DIR && curl -sL https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
 #update npm to latest
-RUN microdnf install -y --nodocs git make g++ \
-    && npm install -g npm
+RUN microdnf install -y --nodocs git make g++
+RUN npm install -g npm
 
 #install commonly used dev/build packages to speed up builds.
-RUN npm i -g \
-    @types/jest \
-    @types/react \
-    @types/react-dom \
-    @vitejs/plugin-react \
-    @vue/eslint-config-standard \
+RUN npm install -g \
     babel-eslint \
     babel-jest \
     babel-loader \
@@ -32,8 +27,6 @@ RUN npm i -g \
     eslint-plugin-promise \
     eslint-plugin-react-hooks \
     eslint-plugin-react-refresh \
-    eslint-plugin-vue \
-    jest \
     jsdoc \
     jsdoc-plugin-intersection \
     react \
@@ -42,11 +35,7 @@ RUN npm i -g \
     react-refresh \
     react-router-dom \
     sass \
-    vite \
-    vue \
-    vue-cli-plugin-style-resources-loader \
-    vue-router \
-    vue-template-compiler
+    vite
 
 COPY node-ops /waka/
 
