Update images. Update node version to latest LTS.

--- a/docker-compose/Dockerfile
+++ b/docker-compose/Dockerfile
@@ -2,7 +2,7 @@ FROM appku/waka:docker
 
 #add packages
 RUN apk update \
-    && apk add --update --no-cache -q openssh gettext ca-certificates
+    && apk add --update --no-cache -q openssh-client gettext ca-certificates
 
 #include scripts
 COPY docker-compose-ops /waka/
