--- a/dotnet/Dockerfile
+++ b/dotnet/Dockerfile
@@ -2,7 +2,7 @@ FROM appku/waka
 
 #run dotnet 3.1 & dotnet-script
 # disable dotnet telemetry
-ENV DOTNET_CLI_TELEMETRY_OPTOUT 1
+ENV DOTNET_CLI_TELEMETRY_OPTOUT=1
 RUN microdnf install -y libicu krb5-workstation \
     && curl "https://dot.net/v1/dotnet-install.sh" -LO \
     && chmod a+x dotnet-install.sh \
