--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,13 +1,13 @@
 FROM appku/waka
 
 #install node
-ENV NVM_DIR /usr/local/nvm
-ENV NVM_NO_PROGRESS 1
-ENV NODE_VERSION 20.9.0
-ENV NODE_PORT 8080
+ENV NVM_DIR=/usr/local/nvm
+ENV NVM_NO_PROGRESS=1
+ENV NODE_VERSION=20.17.0
+ENV NODE_PORT=8080
 RUN mkdir -p $NVM_DIR && curl -sL https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
-ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
-ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+ENV NODE_PATH=$NVM_DIR/v$NODE_VERSION/lib/node_modules
+ENV PATH=$NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
 #update npm to latest
 RUN microdnf install -y --nodocs git make g++
