Add similar tools to cloud-az as gcp (jq, unzip, etc.).

--- a/cloud-az/Dockerfile
+++ b/cloud-az/Dockerfile
@@ -6,4 +6,7 @@ RUN rpm --import https://packages.microsoft.com/keys/microsoft.asc
 #update & install packages
 RUN curl -o /tmp/ms.rpm https://packages.microsoft.com/config/rhel/9.0/packages-microsoft-prod.rpm \
     && rpm -ivh /tmp/ms.rpm
-RUN microdnf install -y --nodocs azure-cli
+RUN microdnf install -y --nodocs \
+    azure-cli \
+    libicu openssl unzip jq python \
+    wget curl openssh git-core unzip make
