Add script for better puppeteer global install usage and version alignment.

--- a/node-puppeteer/Dockerfile
+++ b/node-puppeteer/Dockerfile
@@ -1,11 +1,12 @@
 FROM appku/waka:node
 
+ENV PUPPETEER_VERSION=24.8.2
 #install puppeteer required libs
 RUN microdnf install -y --nodocs alsa-lib atk cups-libs gtk3 urw-base35-gothic-fonts libXcomposite \
     libXcursor libXdamage libXext libXi libXrandr libXScrnSaver libXtst mesa-libgbm nss pango xorg-x11-fonts-100dpi \
     xorg-x11-fonts-75dpi xorg-x11-fonts-cyrillic xorg-x11-fonts-misc xorg-x11-fonts-Type1 xorg-x11-utils
 #install puppeteer
-RUN npm install -g puppeteer@24.7.2
+RUN npm install -g puppeteer@$PUPPETEER_VERSION
 RUN mkdir -p /app/.cache/puppeteer
 RUN cat <<EOF > /app/.puppeteerrc.cjs
 const path = require('path');
@@ -15,4 +16,4 @@ module.exports = {
 EOF
 RUN cd /app && node "$(npm get prefix)/lib/node_modules/puppeteer/install.mjs"
 
-CMD ["node-ops"]
+CMD ["node-puppeteer-ops"]
